k8s/40-angular-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
spec:
  replicas: 1
  selector: { matchLabels: { app: angular-frontend } }
  template:
    metadata: { labels: { app: angular-frontend } }
    spec:
      containers:
      - name: angular-frontend
        image: docker.io/nassimeelkamari/microservices-angular-frontend:latest
        imagePullPolicy: IfNotPresent
        ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
spec:
  type: NodePort
  selector: { app: angular-frontend }
  ports:
  - port: 80
    targetPort: 80
