k8s/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-frontend
  template:
    metadata:
      labels:
        app: angular-frontend
    spec:
      containers:
      - name: angular-frontend
        image: microservices-angular-frontend:latest
        ports:
          - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
  namespace: microservices
spec:
  selector:
    app: angular-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
