k8s/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-task-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-task-service
  template:
    metadata:
      labels:
        app: nodejs-task-service
    spec:
      containers:
      - name: nodejs-task-service
        image: microservices-nodejs-task-service:latest
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-task-service
  namespace: microservices
spec:
  selector:
    app: nodejs-task-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
