k8s/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-user-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-user-service
  template:
    metadata:
      labels:
        app: spring-user-service
    spec:
      containers:
      - name: spring-user-service
        image: microservices-spring-user-service:latest
        ports:
          - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: spring-user-service
  namespace: microservices
spec:
  selector:
    app: spring-user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
