k8s/90-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend: { service: { name: spring-user-service, port: { number: 8081 } } }
      - path: /api/tasks
        pathType: Prefix
        backend: { service: { name: nodejs-task-service, port: { number: 3000 } } }
      - path: /
        pathType: Prefix
        backend: { service: { name: angular-frontend, port: { number: 80 } } }
